--- a/build.gradle
+++ b/build.gradle
@@ -4,9 +4,21 @@ plugins {
 	id 'java'
 }
 
+apply plugin: 'java'
+apply plugin: 'eclipse'
+apply plugin: 'org.springframework.boot'
+apply plugin: 'io.spring.dependency-management'
+
+description = "vis-test"
+
 group = 'com.vis'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '11'
+
+
+tasks.withType(JavaCompile) {
+	options.encoding = 'UTF-8'
+}
 
 repositories {
 	mavenCentral()
