--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/public
+spring.jpa.database=mysql
+spring.datasource.url=jdbc:mysql://mysql-db-container:3306/public
 spring.datasource.username=root
 spring.datasource.password=admin
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 
 server.port=8080
 server.servlet.context-path=/v1/vis-test
